force-app/main/default/objects/TW1_Requested_Category__c/TW1_Requested_Category__c.object-meta.xml
<CustomObject>
    <label>Requested Category</label>
    <nameField>
        <label>Requested Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requested Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>