force-app/main/default/objects/TW1_Requested_Category__c/fields/TW1_Vendor_Category__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Category</label>
    <referenceTo>TW1_Vendor_Category__c</referenceTo>
    <relationshipLabel>Requested Categories</relationshipLabel>
    <relationshipName>Requested_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>