force-app/main/default/objects/TW1_Requested_Category__c/fields/TW1_Vendor_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor_Category_Name__c</fullName>
    <formula>TW1_Vendor_Category__r.TW1_Category__r.TW1_Category__c +&quot; - &quot;+ TW1_Vendor_Category__r.TW1_Category__r.TW1_Sub_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Category</label>
    <type>Text</type>
</CustomField>